--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -13,11 +13,11 @@ $html--font-size: 62.5%;
 //$em-base: 10px;
 $base--font-family: $font-family--source-sans-pro,
 sans-serif;
-$base--font-size: 20;
+$base--font-size: 20px;
 $base--line-height: 1.625;
-$base--font-size--small-screen-width: 18;
-$base__div--font-size: 20;
-$base__div--font-size--small-screen-width: 18;
+$base--font-size--small-screen-width: 18px;
+$base__div--font-size: 20px;
+$base__div--font-size--small-screen-width: 18px;
 
 /*
  * Headings 
@@ -25,92 +25,92 @@ $base__div--font-size--small-screen-width: 18;
 
 $headings--font-family: $font-family--source-sans-pro;
 $headings--line-height: 1.2;
-$h1--font-size: 36;
-$h2--font-size: 30;
-$h3--font-size: 24;
-$h4--font-size: 20;
-$h5--font-size: 18;
-$h6--font-size: 16;
+$h1--font-size: 36px;
+$h2--font-size: 30px;
+$h3--font-size: 24px;
+$h4--font-size: 20px;
+$h5--font-size: 18px;
+$h6--font-size: 16px;
 
 /*
  * Elements 
  *-------------------------------*/
 
-$blockquote--font-size: 30;
+$blockquote--font-size: 30px;
 
 /*
  * Form Elements 
  *-------------------------------*/
 
-$input--font-size: 18;
-$button--font-size: 16;
+$input--font-size: 18px;
+$button--font-size: 16px;
 
 /*
  * Navigation
  *-------------------------------*/
 
-$nav--font-size: 16;
-$submenu--font-size: 14;
-$primary-nav--font-size: 14;
-$archive-pagination--font-size: 16;
-$breadcrumbs--font-size: 16;
+$nav--font-size: 16px;
+$submenu--font-size: 14px;
+$primary-nav--font-size: 14px;
+$archive-pagination--font-size: 16px;
+$breadcrumbs--font-size: 16px;
 
 /*
  * Header
  *-------------------------------*/
 
-$site-title--font-size: 30;
+$site-title--font-size: 30px;
 $site-title--line-height: 1.2;
-$site-description--font-size: 16;
+$site-description--font-size: 16px;
 $site-description--line-height: 1.5;
 
 /*
  * Footer
  *-------------------------------*/
 
-$site-footer--font-size: 16;
-$footer-widgets--font-size: 18;
+$site-footer--font-size: 16px;
+$footer-widgets--font-size: 18px;
 
 /*
  * Entry Content
  *-------------------------------*/
 
-$entry-meta--font-size: 16;
-$entry-header__entry-meta--font-size: 16;
-$entry-footer__entry-meta--font-size: 16;
-$entry-title--font-size: 36;
-$after-entry--font-size: 18;
+$entry-meta--font-size: 16px;
+$entry-header__entry-meta--font-size: 16px;
+$entry-footer__entry-meta--font-size: 16px;
+$entry-title--font-size: 36px;
+$after-entry--font-size: 18px;
 
 /*
  * Comments
  *-------------------------------*/
 
-$comments--font-size: 16;
+$comments--font-size: 16px;
 
 /*
  * Author Box
  *-------------------------------*/
 
-$author-box--font-size: 18;
-$author-box-title--font-size: 18;
+$author-box--font-size: 18px;
+$author-box-title--font-size: 18px;
 
 /*
  * Widgets
  *-------------------------------*/
 
-$widget--font-size: 16;
-$widget-title--font-size: 18;
-$featured-content__entry-title--font-size: 20;
+$widget--font-size: 16px;
+$widget-title--font-size: 18px;
+$featured-content__entry-title--font-size: 20px;
 
 /*
  * Plugins
  *-------------------------------*/
 
-$enews--font-size: 16;
+$enews--font-size: 16px;
 
 /*
  * Archive
  *-------------------------------*/
 
-$archive-description--font-size: 18;
-$archive-title--font-size: 20;
+$archive-description--font-size: 18px;
+$archive-title--font-size: 20px;
