--- a/assets/sass/utilities/variables/_breakpoints.scss
+++ b/assets/sass/utilities/variables/_breakpoints.scss
@@ -1,6 +1,6 @@
-/* # Breakpoints
-  ---------------------------------------------------------------------------------------------------- */
-
+///
+// Breakpoints
+//============================
 //@media only screen and (max-width: 1340px) {
 $breakpoint__screen-size--larger: new-breakpoint(max-width $screen-size--larger 12);
 //@media only screen and (max-width: 1200px) {
