--- a/assets/sass/utilities/variables/_dimensions.scss
+++ b/assets/sass/utilities/variables/_dimensions.scss
@@ -1,20 +1,19 @@
-/*
- *  Dimension Variables
- *-------------------------------------------------*/
-
+//
+// Dimensions Variables
+//=======================
 $base-width: 1280;
 $gutter: 40px;
-
-/* Max Widths */
-
+//
+// Max Widths
+//==========================
 $max-width: $base-width+px;
 $max-width--larger-screen: 1140px;
 $max-width--large-screen: 960px;
 $max-width--medium-screen: 800px;
 $max-width__landing-page: 800px;
-
-/* Content Widths */
-
+//
+// Content Widths
+//==========================
 //$content__Width: 880px;
 $content__Width: $base-width * 0.6875+px;
 $content--width-larger-screen: 800px;
@@ -30,15 +29,11 @@ $secondary-sidebar--width: 180px;
 $content-sidebar-wrap--width: 1060px;
 $content-sidebar-wrap--width-larger-screen: 920px;
 $content-sidebar-wrap--width-large-screen:740px;
-
-/* Header Module */
-
+// Header Module
 $title-area--width: 300px;
 $site-title--min-height:80px;
 $header-right--width:800px;
 $header-right--width-large-screen: 620px; //1200px
-
-/* Footer Module */
-
+// Footer Module
 $footer-widths--width: 380px;
 $footer-widths--width-large-screen: 300px; //1200px
