--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -1,16 +1,8 @@
-/*
- * Common Fonts 
- *-------------------------------*/
-
+// Common Fonts
 $font-family--source-sans-pro: "Source Sans Pro",
 sans-serif;
-
-/*
- * Base Typography 
- *-------------------------------*/
-
+// Base Typography 
 $html--font-size: 62.5%;
-//$em-base: 10px;
 $base--font-family: $font-family--source-sans-pro,
 sans-serif;
 $base--font-size: 20px;
@@ -18,11 +10,7 @@ $base--line-height: 1.625;
 $base--font-size--small-screen-width: 18px;
 $base__div--font-size: 20px;
 $base__div--font-size--small-screen-width: 18px;
-
-/*
- * Headings 
- *-------------------------------*/
-
+// Headings
 $headings--font-family: $font-family--source-sans-pro;
 $headings--line-height: 1.2;
 $h1--font-size: 36px;
@@ -31,86 +19,57 @@ $h3--font-size: 24px;
 $h4--font-size: 20px;
 $h5--font-size: 18px;
 $h6--font-size: 16px;
-
-/*
- * Elements 
- *-------------------------------*/
-
+// Elements
 $blockquote--font-size: 30px;
-
-/*
- * Form Elements 
- *-------------------------------*/
-
+// Form Elements
 $input--font-size: 18px;
 $button--font-size: 16px;
-
-/*
- * Navigation
- *-------------------------------*/
-
+//
+// Navigation
+//===========
 $nav--font-size: 16px;
 $submenu--font-size: 14px;
 $primary-nav--font-size: 14px;
 $archive-pagination--font-size: 16px;
-$breadcrumbs--font-size: 16px;
-
-/*
- * Header
- *-------------------------------*/
-
+//
+// Header
+//==================
 $site-title--font-size: 30px;
 $site-title--line-height: 1.2;
 $site-description--font-size: 16px;
 $site-description--line-height: 1.5;
-
-/*
- * Footer
- *-------------------------------*/
-
+//
+// Footer
+//==================
 $site-footer--font-size: 16px;
 $footer-widgets--font-size: 18px;
-
-/*
- * Entry Content
- *-------------------------------*/
-
+//
+// Entry Content
+//===================
 $entry-meta--font-size: 16px;
 $entry-header__entry-meta--font-size: 16px;
 $entry-footer__entry-meta--font-size: 16px;
 $entry-title--font-size: 36px;
-$after-entry--font-size: 18px;
-
-/*
- * Comments
- *-------------------------------*/
-
+//
+// Comments
+//===================
 $comments--font-size: 16px;
-
-/*
- * Author Box
- *-------------------------------*/
-
-$author-box--font-size: 18px;
-$author-box-title--font-size: 18px;
-
-/*
- * Widgets
- *-------------------------------*/
-
+//
+// Widgets
+//===================
 $widget--font-size: 16px;
 $widget-title--font-size: 18px;
 $featured-content__entry-title--font-size: 20px;
-
-/*
- * Plugins
- *-------------------------------*/
-
+//
+// Plugins
+//===================
 $enews--font-size: 16px;
-
-/*
- * Archive
- *-------------------------------*/
-
+//
+// General Components
+//===================
 $archive-description--font-size: 18px;
 $archive-title--font-size: 20px;
+$breadcrumbs--font-size: 16px;
+$after-entry--font-size: 18px;
+$author-box--font-size: 18px;
+$author-box-title--font-size: 18px;
