initial commit, pushing to new repo

--- a/assets/sass/components/content/_base.scss
+++ b/assets/sass/components/content/_base.scss
@@ -4,7 +4,7 @@
 .entry {
     background-color: $entry--background-color;
     margin-bottom: 40px;
-    padding: 70px 80px;
+    padding: 70px 0;
     @include media($breakpoint__screen-size--small) {
         padding: 30px;
         margin-bottom: 5%;
