--- a/assets/sass/components/sidebars/_base.scss
+++ b/assets/sass/components/sidebars/_base.scss
@@ -3,6 +3,6 @@
     margin-bottom: 40px;
     .widget {
         background-color: $widget--background-color;
-        padding: 40px;
+        padding: 40px 0;
     }
 }
