--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,12 +1,12 @@
 /*!
-    Theme Name: Developers
+    Theme Name: UCSC COmmunication
     Theme URI: https://www.blackbirdconsult.com
     
-	Description: The Genesis-powered Developer's Starter Child Theme
-	Author: Blackbird Consulting
+	Description: Custom Genesis Child Theme for UCSC Communications
+	Author: UC Santa Cruz
 	Author URI: http://www.blackbirdconsult.com/
 
-	Version: 1.0.42
+	Version: 1.0.1
 
 	
 	Template: genesis
