--- a/assets/sass/components/index.scss
+++ b/assets/sass/components/index.scss
@@ -1,10 +1,11 @@
 /*
- * Widgets
+ * Components
  *-------------------------------*/
 
 @import "avatar";
 //@import "buttons";
 @import "accessibility/index";
+@import "above-header/index";
 @import "header/index";
 @import "navigation/index";
 @import "content/index";
