--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,5 @@
 /*!
-    Theme Name: UCSC COmmunication
+    Theme Name: UCSC Communications
     Theme URI: https://www.blackbirdconsult.com
     
 	Description: Custom Genesis Child Theme for UCSC Communications
