--- a/assets/sass/utilities/variables/_dimensions.scss
+++ b/assets/sass/utilities/variables/_dimensions.scss
@@ -15,7 +15,7 @@ $max-width__landing-page: 800px;
 // Content Widths
 //==========================
 //$content__Width: 880px;
-$content__Width: $base-width * 0.6875+px;
+$content--width: $base-width * 0.6875+px;
 $content--width-larger-screen: 800px;
 $content--width-large-screen: 620px;
 $content-both-sidebars--width: 660px;
