--- a/assets/sass/utilities/variables/_typography.scss
+++ b/assets/sass/utilities/variables/_typography.scss
@@ -30,6 +30,7 @@ $button--font-size: 16px;
 $nav--font-size: 16px;
 $submenu--font-size: 14px;
 $primary-nav--font-size: 14px;
+$top-nav--font-size: 15px;
 $archive-pagination--font-size: 16px;
 //
 // Header
