--- a/assets/sass/components/content/_base.scss
+++ b/assets/sass/components/content/_base.scss
@@ -6,7 +6,7 @@
     margin-bottom: 40px;
     padding: 70px 0;
     @include media($breakpoint__screen-size--small) {
-        padding: 30px;
+        padding: 30px 0;
         margin-bottom: 5%;
     }
 }
