--- a/assets/sass/components/widgets/_base.scss
+++ b/assets/sass/components/widgets/_base.scss
@@ -32,7 +32,7 @@
 
 @include media($breakpoint__screen-size--small) {
     .sidebar .widget {
-        padding: 30px;
+        padding: 30px 0;
         margin-bottom: 5%;
     }
 }
