--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -8,6 +8,15 @@ $gray--lighter: #eee;
 $gray--light: #777;
 $gray: #333;
 $red: #c3251d;
+$ucsc--dark-blue: #003c6c;
+$ucsc--light-blue: #006aad;
+$ucsc--lighter-blue: #13a5dc;
+$ucsc--orange: #f29813;
+$ucsc--light-orange: #da216d;
+$ucsc--lighter-orange: #fdc700;
+$ucsc--green: #93c02d;
+$ucsc--blue-green: #007988;
+$ucsc--magenta: #da216d;
 //
 // Color Configuration
 //===========================
