finalized moving primary nav to header, fixed top row

--- a/assets/sass/components/above-header/_base.scss
+++ b/assets/sass/components/above-header/_base.scss
@@ -2,6 +2,12 @@
 
 .page-top {
     background-color: $ucsc--dark-blue;
+    position: fixed;
+    text-align: initial;
+    right: 0;
+    left: 0;
+    top: 0;
+    z-index: 100;
     .top-row {
         margin-top: 0;
         margin-bottom: 0;
