--- a/assets/sass/components/navigation/_accessible-menu.scss
+++ b/assets/sass/components/navigation/_accessible-menu.scss
@@ -52,12 +52,14 @@
         }
     }
     .menu-toggle {
-        border-top: 1px solid $mobile-nav--border-color;
-        line-height: 20px;
-        position: relative;
-        right: 0;
-        z-index: 1000;
-        width: 100%;
+        border-top: none;
+        //line-height: 20px;
+        //position: relative;
+        //right: 0;
+        //z-index: 1000;
+        width: auto;
+        float: right;
+        margin-top: 16px;
         .site-header & {
             border: 0;
         }
@@ -66,6 +68,10 @@
             margin-right: 10px;
             text-rendering: auto;
             @include transform (translate(0, 0));
+        }
+        &:focus,
+        &:hover {
+            border-top: none;
         }
     }
 }
