--- a/assets/sass/utilities/variables/_breakpoints.scss
+++ b/assets/sass/utilities/variables/_breakpoints.scss
@@ -9,3 +9,5 @@ $breakpoint__screen-size--large: new-breakpoint(max-width $screen-size--large 12
 $breakpoint__screen-size--medium: new-breakpoint(max-width $screen-size--medium 6);
 //@media only screen and (max-width: 860px) {
 $breakpoint__screen-size--small: new-breakpoint(max-width $screen-size--small 4);
+//@media only screen and (max-width: 480px) {
+$breakpoint__screen-size--smaller: new-breakpoint(max-width $screen-size--smaller 2);
