--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,5 @@
 /*!
-    Theme Name: UCSC Communications
+    Theme Name: UCSC Genesis Child
     Theme URI: https://www.blackbirdconsult.com
     
 	Description: Custom Genesis Child Theme for UCSC Communications
@@ -14,7 +14,7 @@
 	License: GPL-2.0+
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
-	Text Domain: developers
+	Text Domain: ucsc
 */
 
 @import 'bourbon';
