--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,7 +2,7 @@
     Theme Name: UCSC Genesis Child
     Theme URI: https://www.blackbirdconsult.com
     
-	Description: Custom Genesis Child Theme for UCSC Communications
+	Description: Custom Genesis Child Theme for UCSC
 	Author: UC Santa Cruz
 	Author URI: http://www.blackbirdconsult.com/
 
