added css to account for wp-admin bar.

--- a/assets/sass/components/above-header/_base.scss
+++ b/assets/sass/components/above-header/_base.scss
@@ -8,6 +8,9 @@
     left: 0;
     top: 0;
     z-index: 100;
+    .admin-bar & {
+        top: 32px;
+    }
     .top-row {
         margin-top: 0;
         margin-bottom: 0;
