--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -24,7 +24,7 @@ $link--color: $red;
 $link--hover-color: $gray;
 // Elements
 $base--color: $gray;
-$body--background-color: $gray--lighter;
+$body--background-color: $white;
 $hr--border-color: $gray--lighter;
 // Form Elements
 $input--background-color: $white;
