--- a/assets/sass/components/header/title-area/_site-title.scss
+++ b/assets/sass/components/header/title-area/_site-title.scss
@@ -12,4 +12,9 @@
         color: $site-title--link-color;
         text-decoration: none;
     }
+    .home-hero & {
+        color: $white;
+        text-align: center;
+        font-size: 55px;
+    }
 }
