--- a/assets/sass/components/header/_base.scss
+++ b/assets/sass/components/header/_base.scss
@@ -2,10 +2,16 @@
   // Site Header Base Styles
   //==============================
   .site-header {
-      margin-top: 67px;
+      margin-top: 65px;
+      //   position: fixed;
+      //   right: 0;
+      //   left: 0;
+      //   top: 50px;
+      //   z-index: 100;
+      //   height: 60px;
       background-color: $site-header--background-color;
       >.wrap {
-          padding: 20px 0;
+          padding: 10px 0;
       }
       @include media($breakpoint__screen-size--medium) {
           .wrap {
