--- a/assets/sass/components/header/index.scss
+++ b/assets/sass/components/header/index.scss
@@ -2,5 +2,6 @@
   --------------------------------------------- */
 
 @import "base";
+@import "home-hero";
 @import "title-area/index";
 @import "header-right";
