--- a/assets/sass/components/header/title-area/_base.scss
+++ b/assets/sass/components/header/title-area/_base.scss
@@ -10,9 +10,10 @@
         width: 100%;
         text-align: center;
     }
-    .header-full-width & {
+    .home-hero & {
         //float: none;
-        //width: 100%;
+        width: 100%;
+        //padding: 50% 0 0;
     }
 }
 
