--- a/assets/sass/components/navigation/_accessible-menu.scss
+++ b/assets/sass/components/navigation/_accessible-menu.scss
@@ -53,10 +53,10 @@
     }
     .menu-toggle {
         border-top: none;
-        //line-height: 20px;
-        //position: relative;
-        //right: 0;
-        //z-index: 1000;
+        line-height: 20px;
+        position: relative;
+        right: 0;
+        z-index: 1000;
         width: auto;
         float: right;
         margin-top: 16px;
